# diagonalsw

./: CMakeLists.txt  COPYING  LICENSE  README  README.md
src/c/: CMakeLists.txt  config.h.cmake  create_profile.c  create_profile.h  diagonalsw.c  diagonalsw.ggo.cmake  generate_c.xsl  perm.xml  read_matrix.c  read_matrix.h  read_profile.c  read_profile.h  read_sequence.c  read_sequence.h  smith_waterman_altivec_byte.h  smith_waterman_altivec_byte.xml  smith_waterman_altivec_word.h  smith_waterman_altivec_word.xml  smith_waterman_reference_impl.c  smith_waterman_reference_impl.h  smith_waterman_sse_byte.1load.h  smith_waterman_sse_byte.1load.xml  smith_waterman_sse_byte.1load_HFsave16th.xml  smith_waterman_sse_byte.1load_HFsave16th_var2.xml  smith_waterman_sse_byte.2load.xml  smith_waterman_sse_byte.2load_HFsave16th.xml  smith_waterman_sse_byte.2load_HFsave8th.xml  smith_waterman_sse_word.1load.xml  smith_waterman_sse_word.1load_HFsave4th.xml  smith_waterman_sse_word.2load.xml  smith_waterman_sse_word.h  smith_waterman_vector.h  sse_funcs.c  sse_funcs.h  sw_constants.h
src/docbook/: CMakeLists.txt  index.xml.cmake  params.xsl  preprocess.py
src/docbook/example_files/: 1R69.psi  db.fasta  query.fasta
src/docbook/style/: style.css
